finish tablet view

--- a/travel.html
+++ b/travel.html
@@ -8,7 +8,7 @@
     <title>Travel</title>
 </head>
 <body>
-    <a href = "#main" class="skip-link">Skip to Main Content</a>
+    <div class="skip"><a href = "#main">Skip to Main Content</a></div>
     <header>
         <nav>
             <ul>
@@ -21,16 +21,23 @@
         <h1>Travel</h1>
 
     </header>
-    
     <main id="main">
-        <div>
-            <h2>Yellowstone National Park</h2>
-            <h3>Photo Gallery</h3>
-            <div class="image-grid">
+        <div class="map-container">
+            <h2>Navigate to a Destination!</h2>
+            <img src="images/usa_map.png" alt="USA Map" class="usa-map">
+            <a href="#yellowstone" class="pin pin-yellowstone" title="Yellowstone National Park">Y</a>
+            <a href="#niagara" class="pin pin-niagara" title="Niagara Falls">N</a>
+            <a href="#boulder" class="pin pin-boulder" title="Niagara Falls">B</a>
+        </div>
+        <h2>Yellowstone National Park</h2>
+        <p><strong>Geographical Location: </strong>North America</p>
+        <h3>Photo Gallery</h3>
+        <div id="yellowstone" class="content-section">
+            <div class="image-grid-all">
                 <img src="images/yellowstone_travertine.JPG" width = "400" alt="A large mound of multi-colored travertine">
             </div>
             <p>Mammoth Hot Springs has a number of actively forming Travertine terraces.</p>
-            <div class="image-grid">
+            <div class="image-grid-all">
                 <img src="images/yellowstone_sunset.jpg" width="400" alt="Sunset over mountins with some charred trees in the foreground">
             </div>
             <p>The drive to Lamar Valley requires some dangerous roads.  But the result is amazing sunset views.</p>
@@ -46,68 +53,83 @@
                 Your browser does not support the video tag.  This was a video of the yellowstone national park buffalo.
             </video>
             <p>The buffalo were so common along the roads in Yellowstone that our mantra became "If it ain't lickin the car, we aren't stopping."</p>
-            <div class="image-grid">
+            <div class="image-grid-all">
                 <img src="images/yellowstone_sulphur_springs.JPG" width="400" alt="A large spring with clouds of sulfur smoke rising from it.">
             </div>
             <p>If you can handle the odor, the Yellowstone Sulphur Springs is a great place to hike.</p>
 
             <!-- Colleen van Lent -->
         </div>
-        <div>
-            <h2>Niagara Falls</h2>
-            <div class="image-grid">
-                <img src="images/Niagara_Falls_gif.gif" width="400" alt="A gif of Niagara Falls">
-                <img src="images/Niagara_Falls_jpg.jpg" width="400" alt="A picture of Niagara Falls">
-            </div>
-            <p><strong>Geographical Location: </strong>North America</p>
-            <p>Niagara Falls is located on the border between Canada and the United States. Connecting Lake Erie and Lake Ontario, Niagara Falls has the highest flow rate of any waterfall in North America.</p>
-            <p>Niagara Falls draws in thousands of visitors every year, and for good reason. As such, there are numerous things that you can see while you visit the falls, and it is very easy to make a full trip out of seeing this wonderful sight.</p>
-            
-            <h3>Photo Gallery</h3>
-            <div class="image-grid">
+        <h2>Niagara Falls</h2>
+        <p><strong>Geographical Location: </strong>North America</p>
+        <div id="niagara" class="content-section">
+        <div class="image-grid-all">
+            <img src="images/Niagara_Falls_gif.gif" width="400" alt="A gif of Niagara Falls">
+        </div>
+        <p>Niagara Falls is located on the border between Canada and the United States. Connecting Lake Erie and Lake Ontario, Niagara Falls has the highest flow rate of any waterfall in North America.</p>
+        <div class="image-grid-all">
+            <img src="images/Niagara_Falls_jpg.jpg" width="400" alt="A picture of Niagara Falls">
+        </div>
+        <p>Niagara Falls draws in thousands of visitors every year, and for good reason. As such, there are numerous things that you can see while you visit the falls, and it is very easy to make a full trip out of seeing this wonderful sight.</p>
+        </div>
+        <h3>Photo Gallery</h3>
+        <div id="niagara" class="content-section">
+            <div class="image-grid-all">
                 <img src="images/Niagara_Falls_2.jpg" width="400" alt="A visualization of the 'Horseshoe' part of the falls">
-                <p>The 'Horseshoe'</p>
-
-                <img src="images/Niagara_Falls_Rainbow.jpg" width="400" alt="Niagara Falls with a rainbow touching down in it">
-                <p>A rainbow in Niagara Falls</p>
-
-                <img src="images/Niagara_Falls_Sunset.jpg" width="400" alt="An orange sky overlooking Niagara Falls">
-                <p>A sunset at Niagara Falls</p>
-
-                <img src="images/Niagara_Falls_Colorful.jpg" width="400" alt="Niagara Falls illuminated with colored lights">
-                <p>A colorful view of Niagara Falls</p>
-
-                <img src="images/Niagara_Falls_Zoom-Out.jpg" width="400" alt="Niagara Falls from a distant perspective">
-                <p>A distant look at Niagara Falls</p>
             </div>
+            <p>The 'Horseshoe'</p>
+            <div class="image-grid-all">
+                <img src="images/Niagara_Falls_Rainbow.jpg" width="400" alt="Niagara Falls with a rainbow touching down in it">
+            </div>
+            <p>A rainbow in Niagara Falls</p>
+            <div class="image-grid-all">
+                <img src="images/Niagara_Falls_Sunset.jpg" width="400" alt="An orange sky overlooking Niagara Falls">
+            </div>
+            <p>A sunset at Niagara Falls</p>
+            <div class="image-grid-all">
+                <img src="images/Niagara_Falls_Colorful.jpg" width="400" alt="Niagara Falls illuminated with colored lights">
+            </div>    
+            <p>A colorful view of Niagara Falls</p>
+            <div class="image-grid-all">
+                <img src="images/Niagara_Falls_Zoom-Out.jpg" width="400" alt="Niagara Falls from a distant perspective">
+            </div>
+            <p>A distant look at Niagara Falls</p>
             <!-- Steven Jacovitch -->
         </div>
-        <div>
-            <h2>Boulder Colorado</h2>
-            <div class="image-grid">
+        <h2>Boulder Colorado</h2>
+        <p><strong>Geographical Location: </strong>North America</p>
+        <div id="boulder" class="content-section">
+            <div class="image-grid-all">
                 <img src="images/Boulder_Colorado.gif" width="400" alt="Primary Image of Boulder Colorado as a gif">
-                <img src="images/Boulder_Colorado_Still_Image.jpg" width="400" alt="Primary Image of Boulder Colorado as a non-gif">
             </div>
-            <p><strong>Geographical Location: </strong>North America</p>
             <p>Boulder, Colorado is where the Buffalo Roam. It is home to my Alma Mater, the University of Colorado! There are many hiking locations near the city center, most notably Chautauqua Park.</p>
+            <div class="image-grid-all">
+            <img src="images/Boulder_Colorado_Still_Image.jpg" width="400" alt="Primary Image of Boulder Colorado as a non-gif">
+            </div>
             <p>Boulder, Colorado is a small city of about 104,000 people, about a quarter of which are students that attend the University of Colorado. They city is a vibrant start-up hub that is a center for technology and innovation much like Ann Arbor is.</p>
-
-            <h3>Photo Gallery</h3>
-            <div class="image-grid">
+        </div>
+        <h3>Photo Gallery</h3>
+        <div id="boulder" class="content-section">
+            <div class="image-grid-all">
                 <img src="images/Boulder_Colorado_Campus.jpg" width="400" alt="Snow covered campus with flatirons in the back">
-                <p>Campus During Winter</p>
-
+            </div>
+            <p>Campus During Winter</p>
+            <div class="image-grid-all">
                 <img src="images/Boulder_Colorado_Flatirons.jpg" width="400" alt="Flatirons during the summer with lots of green">  
-                <p>Summer Time Flatirons</p>
-
+            </div>
+            <p>Summer Time Flatirons</p>
+            <div class="image-grid-all">
                 <img src="images/Boulder_Colorado_Pearl_Street.jpg" width="400" alt="Boulder colorado downtown with flatirons in the back">
-                <p>Pearl Street Mall</p>
-
+            </div>
+            <p>Pearl Street Mall</p>
+            <div class="image-grid-all">
                 <img src="images/Boulder_Colorado_Varsity_Pond.jpg" width="400" alt="Winter time on campus">
-                <p>Varsity Pond</p>
-
+            </div>
+            <p>Varsity Pond</p>
+            <div class="image-grid-all">
                 <img src="images/Boulder_Colorado_Snow_on_Flatirons.jpg" width="400" alt="Winter time picture of the flatirons">
-                <p>Winter Flatirons</p>
+            </div>
+            <p>Winter Flatirons</p>
             </div>
         </div>
     </main>
