--- a/index.html
+++ b/index.html
@@ -18,13 +18,12 @@
                 <li><a href = "travel.html">Travel Page</a></li>
             </ul>
         </nav>
-        <h1>Week Two discussion</h1>
+        <h1>Home</h1>
 
     </header>
     <main id="main">
         <div>
             <p>Welcome to my blog, your go-to destination for all things pets, recipes, and travel! Explore a world of captivating content where we cater to your love for furry companions, culinary delights, and globetrotting adventures. </p>
-
         </div>
 
 <div>
