fix w3c validator error on recipes page

--- a/recipes.html
+++ b/recipes.html
@@ -100,9 +100,9 @@
                 <img src="images/mac_cheese3.jpg" width = "400" alt="Well-cooked mac and cheese with a full load of cheese.">
                 <img src="images/mac_cheese4.jpg" width = "400" alt="Mac and cheese cooked in a nice cookware.">
             </div>
-
-            <!-- Linghao Shi -->
         </div>
+            <!-- Linghao Shi -->
+        <div>
             <h2>Coca-Cola Chicken Wings</h2>
             <p><strong>Origin: </strong>China</p>
             <p><strong>Source: </strong>Family Recipe</p>
