--- a/travel.html
+++ b/travel.html
@@ -73,7 +73,7 @@
         <p>Niagara Falls draws in thousands of visitors every year, and for good reason. As such, there are numerous things that you can see while you visit the falls, and it is very easy to make a full trip out of seeing this wonderful sight.</p>
         </div>
         <h3>Photo Gallery</h3>
-        <div id="niagara" class="content-section">
+        <div class="content-section">
             <div class="image-grid-all">
                 <img src="images/Niagara_Falls_2.jpg" width="400" alt="A visualization of the 'Horseshoe' part of the falls">
             </div>
@@ -109,7 +109,7 @@
             <p>Boulder, Colorado is a small city of about 104,000 people, about a quarter of which are students that attend the University of Colorado. They city is a vibrant start-up hub that is a center for technology and innovation much like Ann Arbor is.</p>
         </div>
         <h3>Photo Gallery</h3>
-        <div id="boulder" class="content-section">
+        <div class="content-section">
             <div class="image-grid-all">
                 <img src="images/Boulder_Colorado_Campus.jpg" width="400" alt="Snow covered campus with flatirons in the back">
             </div>
@@ -130,9 +130,7 @@
                 <img src="images/Boulder_Colorado_Snow_on_Flatirons.jpg" width="400" alt="Winter time picture of the flatirons">
             </div>
             <p>Winter Flatirons</p>
-            </div>
         </div>
     </main>
-    
 </body>
 </html>
